--- a/src/components/layout/Header.module.css
+++ b/src/components/layout/Header.module.css
@@ -193,11 +193,10 @@
     flex-direction: column;
     gap: 22px;
     padding: 100px 30px;
-
   }
 
   .navLink{
-    font-size: 3vh;
+    font-size: 18px;
   }
 
   /* Стиль кнопки ВХОД/ВЫХОД */
